#24 done. fix hover vertical align

--- a/css/main.css
+++ b/css/main.css
@@ -484,7 +484,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 0;
     left: 0;
     z-index: 100;
-    border: solid 5px white;
+    border: solid 5px transparent;
     border-radius: 100%;
 }
 .digital-hover-panel{
@@ -928,6 +928,15 @@ height: 5px;
 }
 #pbubble-i-7 .product-panel-group {
     top: -200%;
+}
+#bubble-i-6, #bubble-i-0, #bubble-i-7, #bubble-i-1{
+    background: #E0E21A;
+}
+#ebubble-i-6, #ebubble-i-0, #ebubble-i-7, #ebubble-i-1{
+    background: #194D9B;
+}
+#pbubble-i-0, #pbubble-i-1, #pbubble-i-5, #pbubble-i-6, #pbubble-i-7{
+    background: #04B3E4;
 }
 /*.product-hover-icon:hover .product-hover-panel{
 opacity: 1;
